[project]
name = "local-rag"
version = "0.1.0"
description = "A local RAG system for searching through PDF documents."
authors = [
    {name = "Ammar"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "numpy (==1.26.4)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "faiss-cpu (==1.7.4)",
    "chromadb (>=1.3.5,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "langchain (==0.1.16)",
    "langchain-community (==0.0.38)",
    "pypdf (>=6.3.0,<7.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
